demo/netpol/allow-from-ns.yaml
### Update the label on Namespace <oc label namespace abc name=remoteapp>

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: network-2-policy
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: remoteapp
